Fixed Alignment

--- a/Freshie/css/mainMenu.css
+++ b/Freshie/css/mainMenu.css
@@ -51,7 +51,7 @@
 	font-size: 3rem;
 	width: 200px;
 	height: 50px;
-	left: 90px;
+	left: 30px;
 	text-align: left;
 }
 
